--- a/stm32f0_custom_bootloader/.vscode/settings.json
+++ b/stm32f0_custom_bootloader/.vscode/settings.json
@@ -12,6 +12,7 @@
         "uart_driver.h": "c",
         "host_comm_tx_fsm.h": "c",
         "peripherals_init.h": "c",
-        "host_comm_rx_fsm.h": "c"
+        "host_comm_rx_fsm.h": "c",
+        "stm32f0xx.h": "c"
     }
 }
