--- a/stm32f0_custom_bootloader/.vscode/settings.json
+++ b/stm32f0_custom_bootloader/.vscode/settings.json
@@ -13,6 +13,8 @@
         "host_comm_tx_fsm.h": "c",
         "peripherals_init.h": "c",
         "host_comm_rx_fsm.h": "c",
-        "stm32f0xx.h": "c"
+        "stm32f0xx.h": "c",
+        "led_animation.h": "c",
+        "led_animation_fsm.h": "c"
     }
 }
