feat : host comm fsm were added

--- a/stm32f0_custom_bootloader/Debug/makefile
+++ b/stm32f0_custom_bootloader/Debug/makefile
@@ -12,6 +12,7 @@ RM := rm -rf
 -include Drivers/STM32F0xx_HAL_Driver/Src/subdir.mk
 -include Core/Startup/subdir.mk
 -include Core/Src/led_animation/subdir.mk
+-include Core/Src/host_comm/subdir.mk
 -include Core/Src/API/subdir.mk
 -include Core/Src/subdir.mk
 -include subdir.mk
