--- a/stm32f0_dummy_app/.cproject
+++ b/stm32f0_dummy_app/.cproject
@@ -46,6 +46,8 @@
 									<listOptionValue builtIn="false" value="../Drivers/CMSIS/Device/ST/STM32F0xx/Include"/>
 									<listOptionValue builtIn="false" value="../Drivers/CMSIS/Include"/>
 									<listOptionValue builtIn="false" value="../Core/Inc/API"/>
+									<listOptionValue builtIn="false" value="../Core/Inc/led_animation"/>
+									<listOptionValue builtIn="false" value="../Core/Inc/host_comm"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.14452101" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c"/>
 							</tool>
