feat : state diagram for host tx comm fsm was updated feat : code for tx fsm was updated according to last state diagram update feat : packet proc fsm was included

--- a/stm32f0_custom_bootloader/.cproject
+++ b/stm32f0_custom_bootloader/.cproject
@@ -48,6 +48,7 @@
 									<listOptionValue builtIn="false" value="../Core/Inc/API"/>
 									<listOptionValue builtIn="false" value="../Core/Inc/led_animation"/>
 									<listOptionValue builtIn="false" value="../Core/Inc/host_comm"/>
+									<listOptionValue builtIn="false" value="../Core/Inc/packet_proc"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.14452101" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c"/>
 							</tool>
