--- a/stm32f0_custom_bootloader/Debug/makefile
+++ b/stm32f0_custom_bootloader/Debug/makefile
@@ -11,6 +11,7 @@ RM := rm -rf
 -include sources.mk
 -include Drivers/STM32F0xx_HAL_Driver/Src/subdir.mk
 -include Core/Startup/subdir.mk
+-include Core/Src/packet_proc/subdir.mk
 -include Core/Src/led_animation/subdir.mk
 -include Core/Src/host_comm/subdir.mk
 -include Core/Src/API/subdir.mk
