feat : intel hex functions were added feat : some functions to process the incoming hex data were added

--- a/stm32f0_custom_bootloader/.vscode/settings.json
+++ b/stm32f0_custom_bootloader/.vscode/settings.json
@@ -17,6 +17,8 @@
         "led_animation.h": "c",
         "led_animation_fsm.h": "c",
         "host_comm_fsm.h": "c",
-        "packet_proc_fsm.h": "c"
+        "packet_proc_fsm.h": "c",
+        "bootloader_fsm.h": "c",
+        "intel_hex_parser.h": "c"
     }
 }
